--- a/style.css
+++ b/style.css
@@ -15,19 +15,89 @@ h1{
 }
 
 .criacao{
-    margin: 2rem;
     width: 100%;
-    height: 6rem;    
+    height: 30vh; 
+    display: flex;
+    align-items: center;   
 }
 
 .adicionar{
+    width: 90%;
+    height: auto;
+    margin-left: auto;
+    margin-right:auto;
     background-color: aquamarine;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: column;
     border: 1px solid black;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 18px;
+    gap:1rem
+}
+
+.campo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.label{
+    min-width: 10%;
+    padding-right: auto;
+    font-family: cursive;
+}
+
+.input {
+    --input-focus: #2d8cf0;
+    --font-color: #323232;
+    --font-color-sub: #666;
+    --bg-color: #fff;
+    --main-color: #323232;
+    min-width: 80%;
+    height: 1rem;
+    border-radius: 5px;
+    border: 2px solid var(--main-color);
+    background-color: var(--bg-color);
+    box-shadow: 4px 4px var(--main-color);
+    font-size: 15px;
+    font-weight: 600;
+    color: var(--font-color);
+    padding: 0.5rem;
+    outline: none;
+}
+
+.input::placeholder {
+    color: var(--font-color-sub);
+    opacity: 0.8;
+}
+
+.input:focus {
+    border: 2px solid var(--input-focus);
+}
+
+.cadastrar {
+    padding: 1rem 3rem;
+    border-radius: 10px;
+    border: 0;
+    background-color: rgb(255, 56, 86);
+    letter-spacing: 1.5px;
+    font-size: 1rem;
+    transition: all .3s ease;
+    box-shadow: rgb(201, 46, 70) 0px 10px 0px 0px;
+    color: hsl(0, 0%, 100%);
+}
+
+.cadastrar:hover {
+    box-shadow: rgb(201, 46, 70) 0px 7px 0px 0px;
+}
+
+.cadastrar:active {
+    background-color: rgb(255, 56, 86);
+    /*50, 168, 80*/
+    box-shadow: rgb(201, 46, 70) 0px 0px 0px 0px;
+    transform: translateY(5px);
+    transition: 200ms;
 }
 
 
