--- a/style.css
+++ b/style.css
@@ -1,23 +1,35 @@
+
 *{
     padding: 0;
     margin: 0;
-    font-family: 'Roboto', cursive;
-}
-:root{
-    --input-focus: #2d8cf0;
-    --font-color: #323232;
-    --font-color-sub: #666;
-    --bg-color: #fff;
-    --main-color: #323232;
+    font-family: 'Roboto', sans-serif;
 }
 
+:root{
+    --bg-body-color: #8ecae6;
+    --text-color-sub: #caf0f8;
+    --text-color: #fefae0;
+    --info-color: #ffb703;
+    --info-color-sub: #fb8500;
+    --main-color: #023047;
+    --main-second-color: #219ebc;
+    
+}
+
+body{
+    background-color: var(--bg-body-color);
+}
+
+
+
 h1{
+    font-family: 'Ubuntu', sans-serif;
     height: 2rem;
     text-transform: uppercase;
     display: flex;
     justify-content: center; 
-    background-color: brown;
-    color: aliceblue;
+    background-color: var(--info-color-sub);
+    color: var(--text-color);
     font-size: 1.5rem;
 }
 
@@ -29,16 +41,17 @@ h1{
        
 }
 
-.adicionar{
+.novo_item{
     width: 90%;
     height: auto;
     margin-left: auto;
     margin-right:auto;
-    background-color: aquamarine;
+    background-color: var(--main-color);
+    color: var(--text-color);
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    border: 1px solid aquamarine;
+    border: 1px solid var(--main-color);
     padding: 1rem;
     border-radius: 18px;
     gap:1rem
@@ -48,11 +61,13 @@ h1{
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .label{
     min-width: 10%;
     padding-right: auto;
+    
 }
 
 .input {
@@ -60,57 +75,63 @@ h1{
     min-width: 80%;
     height: 1rem;
     border-radius: 5px;
-    border: 2px solid var(--main-color);
-    background-color: var(--bg-color);
-    box-shadow: 4px 4px var(--main-color);
+    border: 2px solid var(--main-second-color-color);
+    background-color: var(--main-color);
+    box-shadow: var(--main-second-color) 1px 1px 0px 2px;
     font-size: 15px;
     font-weight: 600;
-    color: var(--font-color);
+    color: var(--text-color);
     padding: 0.5rem;
     outline: none;
+    
 }
 
 .input::placeholder {
-    color: var(--font-color-sub);
-    opacity: 0.8;
+    color: var(--text-color);
+    opacity: 0.6;
 }
 
 .input:focus {
-    border: 2px solid var(--input-focus);
+    border: 1px solid var(--main-second-color);
 }
 
-.cadastrar {
+.adicionar {
+    cursor: pointer;
+    text-transform: uppercase;
     padding: 1rem 3rem;
     border-radius: 10px;
-    border: 0;
-    background-color: rgb(255, 56, 86);
+    border: 2px solid var(--info-color);
+    background-color: var(--info-color-sub);
     letter-spacing: 1.5px;
     font-size: 1rem;
     transition: all .3s ease;
-    box-shadow: rgb(201, 46, 70) 0px 10px 0px 0px;
+    box-shadow: 3px 3px var(--info-color);
     color: hsl(0, 0%, 100%);
+    
 }
 
-.cadastrar:hover {
-    box-shadow: rgb(201, 46, 70) 0px 7px 0px 0px;
+.adicionar:hover{
+    font-weight: 700;
+    font-size: 1.1rem;
+    font: 700ms;
 }
 
-.cadastrar:active {
-    background-color: rgb(255, 56, 86);
-    /*50, 168, 80*/
-    box-shadow: rgb(201, 46, 70) 0px 0px 0px 0px;
+.adicionar:active {
+    background-color: var(--info-color-sub);
     transform: translateY(5px);
     transition: 200ms;
+    box-shadow: none;
+    transform: translate(3px, 3px);
 }
 
 
 .colunas{
-    background-color: aquamarine;
+    background-color: var(--main-color);
     width: 90%;
     height: auto;
     margin-left: auto;
     margin-right:auto;
-    border: 1px solid aquamarine;
+    border: 1px solid var(--main-color);
     border-radius: 18px;
     padding: 0 1rem 1rem 1rem;
 }
@@ -121,21 +142,29 @@ h1{
     align-items: center;
 }
 
-
 .container{
     min-height: 70vh;
     min-width: 50vh;
-    background-color: mediumseagreen;
+    background-color: var(--main-second-color);
     color: azure;
-    border: 1px solid mediumseagreen;
+    border: 1px solid var(--main-second-color);
     border-radius: 18px;
-    padding: 2rem;
+    padding: 0.2rem 2rem;
+}
+
+.todo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    padding: 1rem;
+    font-size: 1.5rem;
 }
 
 .item {
     list-style: none;
     padding: 0.6em 2em;
-    background: #FFFFFF;
+    background: var(--info-color);
     border-radius: 10px;
     margin: 0 0 1em;
     width: 100%;
