--- a/style.css
+++ b/style.css
@@ -115,14 +115,12 @@ h1{
     
 }
 
-
-
 .adicionar:active {
-    transform: translateY(5px);
     transition: 200ms;
     box-shadow: none;
     transform: translate(3px, 3px);
 }
+
 .adicionar:after{
     height:100%;
     width:100%;
@@ -133,6 +131,43 @@ h1{
     z-index:-1;
 }
 
+.menu-action{
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+.btn-clear{
+    border: 1px solid var(--color3);
+    background-color: transparent;
+    color: var(--color3);
+    padding: 0.5rem;
+    border-radius: 10px;
+    box-shadow: 0px 3px var(--color3);
+    text-transform: uppercase; 
+}
+
+.btn-clear:hover{
+    cursor: pointer; 
+}
+
+.btn-clear:active{
+    transition: 200ms;
+    box-shadow: none;
+    transform: translate(3px, 3px);
+}
+
+.btn-text{
+    visibility: hidden;
+    font-size: 0px;
+}
+
+.btn-clear:hover > .btn-text{
+    visibility: visible;
+    font-size: 1rem;
+    transition: 200ms;
+}
 
 .colunas{
     background-color: var(--color4);
@@ -145,11 +180,7 @@ h1{
     padding: 0 1rem 1rem 1rem;
 }
 
-.menu-action{
-    height: 3rem;
-    display: flex;
-    align-items: center;
-}
+
 
 .container{
     min-height: 70vh;
@@ -168,6 +199,17 @@ h1{
     text-transform: uppercase;
     padding: 1rem;
     font-size: 1.5rem;
+}
+
+.btn-check{
+    border:1px solid black;
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+}
+
+.item > .descricao{
+    display: none;
 }
 
 .item {
@@ -196,9 +238,5 @@ h1{
     color: var(--color3);
     font-weight: 400;
 }
-
-.item:hover{
-    background-color: var(--color2);
-} 
 
 
