--- a/style.css
+++ b/style.css
@@ -187,7 +187,6 @@ body{
     grid-template-columns: 1fr 3fr 1fr;
     list-style: none;
     padding: 1em 1em;
-    background: var(--color4);
     border-radius: 10px;
     margin: auto auto 1em;
     width: 100%;
@@ -197,7 +196,21 @@ body{
     
     color: var(--color3);
     border:1px solid var(--color3);
+    transition: 300ms all ease;
+}
+
+.item-to-do{
+    background: var(--color4);
     box-shadow: 0.2rem 0.4rem var(--color3);
+    border:1px solid var(--color3);
+
+}
+
+.item-done{
+    box-shadow:  0rem 0.1rem var(--color3);
+    background-color:  var(--color5);
+    transform: translate(4px, 4px);
+    
 }
 
 
@@ -246,7 +259,9 @@ div .tarefa{
     display: none;
 }
 
-
+.fa-check{
+    color: var(--color2);
+}
 
 
 .div_btns{
